# openspec-tui

./: README.md  openspec-tui.py  pyproject.toml
openspec_tui/: __init__.py
openspec_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
